# KaliLaska

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  Jenkinsfile  README.md  build.cmake  doxygen.cmake
cmake/: build.cmake  doxygen.cmake
examples/: CMakeLists.txt
examples/scene_view/: BaseItem.hpp  CMakeLists.txt  ExampleItem.cpp  ExampleItem.hpp  ExampleScene.cpp  ExampleScene.hpp  ExampleView.cpp  ExampleView.hpp  RingItem.cpp  RingItem.hpp  TextureItem.cpp  TextureItem.hpp  fragment_shader.glsl  main.cpp  shaders.hpp.cmake  vertex_shader.glsl
examples/textures/: BaseItem.hpp  CMakeLists.txt  Scene.cpp  Scene.hpp  TextureItem.cpp  TextureItem.hpp  View.cpp  View.hpp  main.cpp  shaders.hpp.cmake  tex_frag_shader.glsl  tex_ver_shader.glsl
examples/window/: CMakeLists.txt  MyWindow.cpp  MyWindow.hpp  main.cpp
examples/windowGL/: CMakeLists.txt  WindowGL.cpp  WindowGL.hpp  main.cpp
examples/windowTmp/: CMakeLists.txt  WindowGL.cpp  main.cpp
include/KaliLaska/: AbstractGraphicsItem.hpp  AbstractGraphicsView.hpp  AbstractWindow.hpp  Application.hpp  Box.hpp  CloseEvent.hpp  CloseEventImp.hpp  Color.hpp  Event.hpp  EventImpFactory.hpp  EventNotifyer.hpp  GraphicsItem.hpp  GraphicsScene.hpp  GraphicsView.hpp  KeyPressEvent.hpp  KeyReleaseEvent.hpp  KeyboardFocusEvent.hpp  Menu.hpp  MouseFocusEvent.hpp  MouseMoveEvent.hpp  MouseMoveEventImp.hpp  MousePressEvent.hpp  MouseReleaseEvent.hpp  MouseWheelEvent.hpp  MouseWheelEventImp.hpp  MoveEvent.hpp  Object.hpp  Picture.hpp  Point.hpp  ResizeEvent.hpp  Ring.hpp  SceneEvent.hpp  SceneMouseMoveEvent.hpp  SceneMousePressEvent.hpp  SceneMouseReleaseEvent.hpp  ShowEvent.hpp  Size.hpp  TransformMatrix.hpp  Window.hpp  WindowImp.hpp  (+3 more)
include/KaliLaska/imp/: ApplicationImp.hpp  CloseEventImp.hpp  EventImpFactory.hpp  KeyPressEventImp.hpp  KeyReleaseEventImp.hpp  KeyboardFocusEventImp.hpp  MouseFocusEventImp.hpp  MouseMoveEventImp.hpp  MousePressEventImp.hpp  MouseReleaseEventImp.hpp  MouseWheelEventImp.hpp  ResizeEventImp.hpp  ShowEventImp.hpp  WindowImp.hpp  WindowImpFactory.hpp
src/: CMakeLists.txt  debug.hpp  main.cpp
src/Director/: CMakeLists.txt
src/Director/include/: Director.hpp  enums.hpp
src/Director/sources/: Director.cpp
src/Scene/: CMakeLists.txt
src/application/: AppFactory.cpp  AppFactory.hpp  Application.cpp  EventNotifyer.cpp  EventNotifyer.hpp
src/application/imp/: ApplicationImp.hpp
src/application/sdl/: ApplicationSdl.cpp  ApplicationSdl.hpp
src/core/: Color.cpp  Point.cpp  Size.cpp
src/events/: CloseEvent.cpp  Event.cpp  EventFactory.cpp  EventFactory.hpp  EventNotifyer.cpp  KeyPressEvent.cpp  KeyPrinter.cpp  KeyPrinter.hpp  KeyReleaseEvent.cpp  KeyboardFocusEvent.cpp  MouseFocusEvent.cpp  MouseMoveEvent.cpp  MousePressEvent.cpp  MouseReleaseEvent.cpp  MouseWheelEvent.cpp  MoveEvent.cpp  ResizeEvent.cpp  ShowEvent.cpp
src/events/imp/: .EventImpFactory.hpp.swo  EventImpFactory.hpp  KeyPressEventImp.hpp  KeyReleaseEventImp.hpp  KeyboardFocusEventImp.hpp  MouseFocusEventImp.hpp  MouseMoveEventImp.hpp  MouseReleaseEventImp.hpp  MoveEventImp.hpp  ResizeEventImp.hpp
src/events/sdl/: CloseEventSdl.cpp  CloseEventSdl.hpp  EventConverterSdl.cpp  EventConverterSdl.hpp  EventSdlFactory.cpp  EventSdlFactory.hpp  KeyPressEventSdl.cpp  KeyPressEventSdl.hpp  KeyReleaseEventSdl.cpp  KeyReleaseEventSdl.hpp  KeyboardFocusEventSdl.cpp  KeyboardFocusEventSdl.hpp  MouseFocusEventSdl.cpp  MouseFocusEventSdl.hpp  MouseMoveEventSdl.cpp  MouseMoveEventSdl.hpp  MousePressEventSdl.cpp  MousePressEventSdl.hpp  MouseReleaseEventSdl.cpp  MouseReleaseEventSdl.hpp  MouseWheelEventSdl.cpp  MouseWheelEventSdl.hpp  MoveEventSdl.cpp  MoveEventSdl.hpp  ResizeEventSdl.cpp  ResizeEventSdl.hpp  SdlEvents.cpp  SdlEvents.hpp  ShowEventSdl.cpp  ShowEventSdl.hpp
src/geometry/: Box.cpp  Color.cpp  Point.cpp  Ring.cpp  Size.cpp  TransformMatrix.cpp
src/graphics/: AbstractGraphicsItem.cpp  AbstractGraphicsView.cpp  ConstIterator.cpp  GraphicsItem.cpp  GraphicsScene.cpp  GraphicsSceneImpFactory.cpp  GraphicsSceneImpFactory.hpp  GraphicsView.cpp  IteratorImp.cpp  IteratorImp.hpp  MoveSceneState.cpp  MoveSceneState.hpp  NotifySceneState.cpp  NotifySceneState.hpp  SceneMouseMoveEvent.cpp  SceneMousePressEvent.cpp  SceneMouseReleaseEvent.cpp  UnModificableState.cpp  UnModificableState.hpp  ViewState.hpp
src/graphics/imp/: GraphicsSceneImp.hpp  GraphicsSceneImpFactory.hpp  SceneIterator.cpp  SceneIteratorImp.hpp
src/graphics/rtree/: GraphicsSceneRTree.cpp  GraphicsSceneRTree.hpp  GraphicsSceneRTreeFactory.cpp  GraphicsSceneRTreeFactory.hpp  SceneIteratorRTree.cpp  SceneIteratorRTree.hpp
src/logger/: logger.cpp  logger.hpp
src/objects/: CMakeLists.txt
src/objects/include/: DirectLight.hpp  Drawable.hpp  Light.hpp  PointLight.hpp  SpotLight.hpp  Sprite.hpp  Tile.hpp
src/opengl/: Attacher.cpp  Cache.cpp  GLFactory.cpp  Picture.cpp  Program.cpp  Renderer.cpp  Shader.cpp  ShaderProgram.cpp  Texture.cpp
src/window/: AbstractWindow.cpp  Menu.cpp  Window.cpp
src/window/imp/: MenuImp.hpp  MenuImpFactory.hpp  WindowImp.hpp  WindowImpFactory.hpp
src/window/sdl/: MenuImgui.cpp  MenuImgui.hpp  MenuSdl.cpp  MenuSdl.hpp  WindowSdl.cpp  WindowSdl.hpp  WindowSdlFactory.cpp  WindowSdlFactory.hpp
tests/: CMakeLists.txt
tests/include/: OpenGLWindow.hpp  TestWindow.hpp
tests/src/: test_Application.cpp  test_CustomEvents.cpp  test_GraphicsScene.cpp  test_TransformMatrix.cpp  test_Window.cpp  test_openGL.cpp  test_triangulation.cpp
